--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="js/index.js"></script>
+    <!-- add this to create the IndexDB connection -->
+    <script src="./js/idb.js"></script>
 </body>
 
 </html>
